Fix IE bug (background not showing)

--- a/wp-content/themes/kulturkortet/assets/source/sass/components/_main.scss
+++ b/wp-content/themes/kulturkortet/assets/source/sass/components/_main.scss
@@ -1,3 +1,4 @@
 .c-main {
     background-color: $color-background;
+    display: block;
 }
